--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "supply-tracker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "db:seed": "tsx ./src/db/seed.ts"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@types/better-sqlite3": "^7.6.11",
-    "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^11.3.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.2",
-    "lucide-react": "^0.395.0",
-    "nanoid": "^5.0.7",
-    "next": "14.2.4",
-    "postgres": "^3.4.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.2",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "drizzle-kit": "^0.22.7",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.1",
-    "typescript": "^5"
-  }
+	"name": "supply-tracker",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"db:seed": "tsx ./src/db/scripts/seed.ts",
+		"db:clear": "tsx ./src/db/scripts/clear.ts",
+		"db:reset": "npm run db:clear && npx drizzle-kit push && npm run db:seed"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-toast": "^1.2.1",
+		"@types/better-sqlite3": "^7.6.11",
+		"bcryptjs": "^2.4.3",
+		"better-sqlite3": "^11.3.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
+		"drizzle-orm": "^0.31.2",
+		"lucide-react": "^0.395.0",
+		"nanoid": "^5.0.7",
+		"next": "14.2.4",
+		"postgres": "^3.4.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.52.2",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"drizzle-kit": "^0.22.7",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"tsx": "^4.19.1",
+		"typescript": "^5"
+	}
 }
