integrated react hook form with server actions in 'add item form' using zustand

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
 			"password": "admin123"
 		}
 	],
-	"cSpell.words": ["lucide"]
+	"cSpell.words": ["lucide"],
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
