--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
-		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
@@ -33,10 +33,11 @@
 		"postgres": "^3.4.4",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-hook-form": "^7.52.2",
+		"react-hook-form": "^7.53.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "^5.0.0-rc.2"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
