migrated from beter-sqlite3 to turso

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,6 @@
 			"password": "admin123"
 		}
 	],
-	"cSpell.words": ["lucide"],
+	"cSpell.words": ["libsql", "lucide", "turso"],
 	"typescript.tsdk": "node_modules/typescript/lib"
 }
