Revert "migrated from beter-sqlite3 to turso"
This reverts commit fb96309e075400e8b1fca571309c87f892c9d746.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,6 @@
 			"password": "admin123"
 		}
 	],
-	"cSpell.words": ["libsql", "lucide", "turso"],
+	"cSpell.words": ["lucide"],
 	"typescript.tsdk": "node_modules/typescript/lib"
 }
