--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
+		"postinstall": "npm run db:reset",
 		"db:seed": "tsx ./src/db/scripts/seed.ts",
 		"db:clear": "tsx ./src/db/scripts/clear.ts",
 		"db:reset": "npm run db:clear && npx drizzle-kit push && npm run db:seed"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
-		"@libsql/client": "^0.14.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -22,11 +22,13 @@
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-toast": "^1.2.1",
 		"@react-email/components": "^0.0.25",
+		"@types/better-sqlite3": "^7.6.11",
 		"bcryptjs": "^2.4.3",
+		"better-sqlite3": "^11.3.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
-		"drizzle-orm": "^0.35.2",
+		"drizzle-orm": "^0.31.2",
 		"lucide-react": "^0.395.0",
 		"nanoid": "^5.0.7",
 		"next": "14.2.4",
@@ -45,7 +47,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"drizzle-kit": "^0.26.2",
+		"drizzle-kit": "^0.22.7",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.4",
 		"postcss": "^8",
