converted items table to <table>. rendering actions dropdown instead of buttons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
 		}
 	],
 	"cSpell.words": ["lucide"],
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"prettier.useTabs": true
 }
